--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.10.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.10.0"
   },
   "scripts": {
     "start": "nodemon server"
