--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "free-translate": "^0.6.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
