--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "eslint": "^8.35.0"
   }
 }
