--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "nodemon server"
