--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "axios": "^1.3.4",
+    "chroma-js": "^2.4.2",
     "framer-motion": "^10.2.3",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
