--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
     "lodash": "^4.17.21",
