--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,7 +40,6 @@
   "devDependencies": {
     "axios": "^1.3.4",
     "chroma-js": "^2.4.2",
-    "framer-motion": "^10.2.3",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
