--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@sweetalert2/theme-wordpress-admin": "^5.0.15",
     "axios": "^1.3.4",
     "chroma-js": "^2.4.2",
     "react-icons": "^4.8.0",
