--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "axios": "^1.3.4",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
+    "i18next": "^22.4.12",
+    "i18next-http-backend": "^2.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "react-i18next": "^12.2.0",
     "yarn": "^1.22.19"
   },
   "scripts": {
