--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "free-translate": "^0.6.1",
     "i18next": "^22.4.12",
     "i18next-http-backend": "^2.2.0",
+    "idb": "^7.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
