--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.5.0",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
     "mongoose": "^6.11.3",
     "morgan": "^1.10.0",
+    "node-color-log": "^10.0.2",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "nodemon --ignore client/ server"
+    "start": "nodemon --ignore client/ server",
+    "lint": "eslint . --ext js,cjs --report-unused-disable-directives --max-warnings 0"
   },
   "name": "chemistry-app",
   "version": "1.0.0",
