--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "axios": "^1.5.0",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
+    "jest": "^29.6.4",
     "mongoose": "^6.11.3",
     "morgan": "^1.10.0",
     "node-color-log": "^10.0.2",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
+    "supertest": "^6.3.3",
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "nodemon --ignore client/ server",
-    "lint": "eslint . --ext js,cjs --report-unused-disable-directives --max-warnings 0"
+    "back:dev": "nodemon --ignore client/ --ignore tests/ setup",
+    "back:build": "node setup",
+    "back:test": "jest",
+    "front": "cd client && yarn",
+    "build": "yarn front build && yarn back:build",
+    "back:lint": "eslint . --ext js,cjs --report-unused-disable-directives --max-warnings 0"
   },
   "name": "chemistry-app",
   "version": "1.0.0",
