--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "free-translate": "^0.6.1",
+    "helmet": "^7.0.0",
     "jest": "^29.6.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.11.3",
     "morgan": "^1.10.0",
     "node-color-log": "^10.0.2",
