--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "edge-paths": "^3.0.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.0",
     "express-validator": "^7.0.1",
@@ -16,6 +17,7 @@
     "node-color-log": "^10.0.2",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
+    "puppeteer-core": "^21.2.1",
     "supertest": "^6.3.3",
     "yarn": "^1.22.19"
   },
@@ -25,7 +27,8 @@
     "back:test": "jest",
     "front": "cd client && yarn",
     "build": "yarn front build && yarn back:build",
-    "back:lint": "eslint . --ext js,cjs --report-unused-disable-directives --max-warnings 0"
+    "back:lint": "eslint . --ext js,cjs --report-unused-disable-directives --max-warnings 0",
+    "image:unfilter": "node unFilterImages.js"
   },
   "name": "chemistry-app",
   "version": "1.0.0",
